# SearchGPT

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml  run.py  run_api.py  run_frontend.py
docs/: BM25_HEAP_OPTIMIZATION.md  METHODS_COMPARISON.md
scripts/: build_index.py  load_data.py  run_benchmark.py  setup_indices.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: health.py  search.py
src/core/: cache.py  config.py  embedding_manager.py  logging.py  ollama_client.py  search_manager.py
src/evaluation/: __init__.py
src/frontend/: app.py
src/hybrid_search/: __init__.py  embedding_search.py  fusion_layer.py  my_bm25.py
src/llm_reranking/: __init__.py
src/llm_reranking/prompt-based/: llm_reranker.py
src/llm_reranking/prompt_based/: llm_reranker.py
tests/: __init__.py  conftest.py
tests/test_api/: __init__.py  test_health.py  test_search.py
tests/test_evaluation/: __init__.py
tests/test_hybrid_search/: __init__.py  test_bm25.py  test_embedding_search.py  test_fusion_layer.py
tests/test_llm_reranking/: __init__.py
