[project]
name = "searchgpt"
version = "0.1.0"
description = "LLM-powered search engine with hybrid search and re-ranking"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",  # For FastAPI testing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
