[project]
name = "searchgpt"
version = "0.1.0"
description = "LLM-powered search engine with hybrid search and re-ranking"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.12.0",
    "numpy>=2.0.2",
    "spacy>=3.8.7",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
    "requests>=2.32.5",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "scikit-learn>=1.6.1",
    "en-core-web-sm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",  # For FastAPI testing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
